style: apply spotless
Signed-off-by: Dimitar Dinev <mitkojc@gmail.com>